ads put and delete fix
